--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parse": "^0.1.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.7",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
