heroku deply fail

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node backend/app.js",
+    "start": "cd backend && npm start",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   }
 }
