--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
-    "start": "cd backend && npm start"
+    "start": "cd backend && npm start",
+    "heroku-postbuild": "cd frontend && npm install && npm run serve"
   }
 }
