--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-service": "~5.0.0",
     "axios": "^0.27.2",
     "axios-progress-bar": "^1.2.0",
     "core-js": "^3.8.3",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.2",
-    "@vue/cli-service": "~5.0.0"
+    "vue-turn-off-autocomplete": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
