--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "axios-progress-bar": "^1.2.0",
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "primeicons": "^5.0.0",
     "primevue": "^3.12.6",
     "vue": "^3.2.13",
